--- a/src/main/resources/fusefis.yaml
+++ b/src/main/resources/fusefis.yaml
@@ -209,7 +209,7 @@ builds:
   externalScmUrl: ssh://git@github.com/jboss-fuse/fuse-components.git
   scmRevision: fuse-components-${version.fusesource.camel.sap}
   buildScript: >
-    mvn -Dexec.executable=\"echo\" -Dexec.args='${project.version}' -Dexec.outputFile=\"file.version\" --non-recursive --batch-mode org.codehaus.mojo:exec-maven-plugin:1.3.1:exec > /dev/null 2>&1 || { echo \"Maven invocation failed!\" 1>&2; exit 1; }
+    mvn -Dexec.executable=\"echo\" -Dexec.args='${dollar}{project.version}' -Dexec.outputFile=\"file.version\" --non-recursive --batch-mode org.codehaus.mojo:exec-maven-plugin:1.3.1:exec > /dev/null 2>&1 || { echo \"Maven invocation failed!\" 1>&2; exit 1; }
 
     VERSION=$( cat \"file.version\" )
 
@@ -217,7 +217,7 @@ builds:
 
     find . -name \"MANIFEST.MF\" -print | xargs sed -i \"s/Bundle-Version: $STRIPVERSION/Bundle-Version: $VERSION/g\"
 
-    mvn -e -V -B -DskipTests -DfailIfNoTests=false -Dtest=false -Dgpg.skip=true -Prelease,deploy,nochecks clean deploy'
+    mvn -e -V -B -DskipTests -DfailIfNoTests=false -Dtest=false -Dgpg.skip=true -Prelease,deploy,nochecks clean deploy
   customPmeParameters:
     - '-DprojectMetaSkip=true'
     - '-DdependencyExclusion.javax.ws.rs:*@*='
