--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
   </prerequisites>
 
   <properties>
+    <pme.filename>pme.properties</pme.filename>
     <version.fuse.prefix>7.4.0</version.fuse.prefix>
     <version.sprint.milestone>42</version.sprint.milestone>
     <build.number>1</build.number>
@@ -284,7 +285,7 @@
           </goals>
           <configuration>
             <files>
-            <file>${project.basedir}/pme.properties</file>
+            <file>${project.basedir}/${pme.filename}</file>
             </files>
           </configuration>
         </execution>
@@ -296,7 +297,7 @@
           </goals>
           <configuration>
             <files>
-              <file>${project.basedir}/pme.properties</file>
+              <file>${project.basedir}/${pme.filename}</file>
             </files>
           </configuration>
         </execution>
